# flask-demo

./:  main.py  .gitignore  README.md  pyproject.toml
src/: app.py
src/api/v1/: __init__.py  blue_print.py
src/api/v1/controller/: book.py  client.py  user.py
src/config/: secure.py
src/enums/: client.py
src/libs/: base_validator.py  error.py  error_code.py  token_auth.py
src/models/: base.py  user.py
src/modules/client/: client_service.py  client_validator.py
src/modules/user/: user_service.py  user_validator.py
tests/: decorate.py  list_test.py  test_client.py
